fix: Checkbox alignment in mobile mode

--- a/style.css
+++ b/style.css
@@ -87,7 +87,7 @@ body {
 .options > div {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: start;
   margin-bottom: 1rem;
 }
 
@@ -380,6 +380,7 @@ input[type="number"]::-webkit-outer-spin-button {
 
   .options > div {
     flex-direction: row;
+    align-items: center;
   }
 
   .options-group.exclude {
@@ -466,5 +467,6 @@ input[type="number"]::-webkit-outer-spin-button {
 
   .options > div {
     flex-direction: row;
+    align-items: center;
   }
 }
